--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
 
     <section>
-        <img src="cxk.jpeg" alt="Your Image" style="max-width: 20%; height: auto;">
+        <img src="https://github.com/alenturing/alenturing.github.io/blob/main/cxk.jpeg" alt="Your Image" style="max-width: 20%; height: auto;">
         <p>Hi, my name is Alen. I have a passion for singing, dancing, rapping, and playing basketball. I am currently studying at the University of KK.</p>
     </section>
 
