--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <a href="https://rec.ustc.edu.cn/profile" target="_blank">REC睿课网</a>
             <a href="https://pics.ustc.edu.cn/instrument" target="_blank">USTC理化中心</a>
             <a href="https://yqzx.ustc.edu.cn/lfsms" target="_blank">USTC仪器共享</a>
-            <a href="https://alenturing.github.io/about" target="_blank">About me</a>
+            <a href="about/index.html" target="_blank">About me</a>
         </div>
     </div>
 
