--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>我的书签导航</title>
+    <title>我的书签导航-Xiaoyu</title>
     <style>
         body {
             font-family: "微软雅黑", sans-serif;
