--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
         <div class="links">
             <a href="https://yjs1.ustc.edu.cn/gsapp/sys/yjsemaphome/portal/index.do?forceCas=1" target="_blank">USTC研究生</a>
             <a href="https://email.ustc.edu.cn/" target="_blank">USTCmail</a>
-            <a href="https://rec.ustc.edu.cn/profile" target="_blank">REC睿课网</a>
+            <a href="https://i.ustc.edu.cn/page/site/index" target="_blank">i-USTC</a>
+            <a href="https://ustc.life/" target="_blank">USTC Life</a>
+            <a href="https://pan.ustc.edu.cn/login?redirect=/profile/index" target="_blank">科大云盘</a>
             <a href="https://pics.ustc.edu.cn/instrument" target="_blank">USTC理化中心</a>
             <a href="https://yqzx.ustc.edu.cn/lfsms" target="_blank">USTC仪器共享</a>
         </div>
@@ -267,8 +269,8 @@
         <h2>💼 工作效率</h2>
         <div class="links">
             <a href="https://chat.deepseek.com" target="_blank">Deepseek</a>
-            <a href="https://ai-bot.cn" target="_blank">AIbot</a>
-            <a href="https://chatgpt.com/?model=auto" target="_blank">Chatgpt</a>
+            <a href="https://ai-bot.cn" target="_blank">AI bot</a>
+            <a href="https://chatgpt.com/?model=auto" target="_blank">ChatGPT</a>
             <a href="https://www.neat-reader.cn/webapp#/" target="_blank">NeatReader</a>
             <a href="https://docs.google.com" target="_blank">Google 文档</a>
             <a href="https://trello.com" target="_blank">Trello 看板</a>
@@ -278,13 +280,15 @@
 
     <!-- 化学工具 -->
     <div class="category">
-        <h2>🧑‍🔬 化学实用工具</h2>
+        <h2>🧑‍🔬 科研实用工具</h2>
         <div class="links">
             <a href="https://www.chemicalaid.com/" target="_blank">ChemicalAid</a>
             <a href="https://iupac.org/what-we-do/periodic-table-of-elements/" target="_blank">元素周期表</a>
             <a href="https://zh.numberempire.com/" target="_blank">积分计算器</a>
             <a href="https://legacy.materialsproject.org/" target="_blank">材料参数</a>
             <a href="https://srdata.nist.gov/" target="_blank">NIST库</a>
+            <a href="https://next-gen.materialsproject.org/materials" target="_blank">CIF数据库</a>
+            <a href="https://www.crystallography.net/cod/" target="_blank">COD-CIF</a>
         </div>
     </div>
 
@@ -330,3 +334,4 @@
     </footer>
 </body>
 </html>
+
