--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
     <div class="category">
         <h2>🎓 学习平台</h2>
         <div class="links">
+            <a href="https://www.duolingo.cn/" target="_blank">多邻国</a>
             <a href="https://coursera.org" target="_blank">国际课程</a>
             <a href="https://zhihu.com" target="_blank">知乎</a>
             <a href="https://bilibili.com" target="_blank">B站视频学习</a>
@@ -330,8 +331,9 @@
 
     <footer>
         <a href="about.html" target="_blank">📌 关于我</a>
-        <a href="other.html" target="_blank">🔗 其它</a>
+        <a href="https://rewards.bing.com/welcome?rh=CFDA2950&ref=rafsrchae" target="_blank">🔗 其它</a>
     </footer>
 </body>
 </html>
+
 
