--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
             <a href="https://chat.deepseek.com" target="_blank">Deepseek</a>
             <a href="https://ai-bot.cn" target="_blank">AI bot</a>
             <a href="https://chatgpt.com/?model=auto" target="_blank">ChatGPT</a>
+            <a href="https://www.deepl.com/zh/translator/products/translator" target="_blank">DeepL</a>
             <a href="https://www.neat-reader.cn/webapp#/" target="_blank">NeatReader</a>
             <a href="https://docs.google.com" target="_blank">Google 文档</a>
             <a href="https://trello.com" target="_blank">Trello 看板</a>
@@ -335,5 +336,6 @@
     </footer>
 </body>
 </html>
+
 
 
